# rustVPN-core

./: Cargo.toml  README.md  structMaybe.txt  structNew.txt  structOLD.txt
docs/: contributing.md  obfuscations.md  project_information.md
src/: main.rs
src/cli/: interface.rs  mod.rs
src/config/: loader.rs  mod.rs  model.rs  parser.rs
src/connection/: manager.rs  mod.rs
src/connection/protocols/: TCP.rs  basic_TCP.rs  basic_UDP.rs  mod.rs  plugin.rs  shadowsocks.rs  tcp.rs  udp.rs  wireguard.rs
src/connection/protocols/proxy/: http.rs  https.rs  mod.rs  socks4.rs  socks5.rs
src/connection/proxy/: https.rs  mod.rs
src/connection/transport/: mod.rs  quic.rs  tcp.rs
src/core/: controller.rs  lifecycle.rs  mod.rs  state.rs
src/ecnryption/: encryption.rs  pfs.rs
src/encryption/: cipher.rs  error.rs  key_manager.rs  mod.rs  traits.rs
src/encryption/cipher/: aead.rs  aes.rs  chacha20.rs  mod.rs
src/encryption/cipher/aes/: cfb.rs  gcm.rs  mod.rs  pmac-siv.rs
src/encryption/cipher/stream/: chacha.rs  mod.rs  salsa.rs
src/encryption/key/: kdf.rs  manager.rs  mod.rs  store.rs
src/killswitch/: linux.rs  windows.rs
src/obfuscation/: common.rs  mod.rs
src/obfuscation/dpi_bypass/: mod.rs
src/obfuscation/utils/: crypto.rs  packet.rs
src/obfuscation/wrappers/: mod.rs
src/plugin/: loader.rs  mod.rs
src/tunneling/: device.rs  mod.rs  routing.rs
src/utils/: common.rs  config.rs  error.rs  logging.rs  metrics.rs  mod.rs  utils.rs
