[package]
name = "vpn-core-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
boringtun = { git = "https://github.com/cloudflare/boringtun", branch = "master" }
shadowsocks-rust = { git = "https://github.com/shadowsocks/shadowsocks-rust", tag = "v1.21.0" }
openssl = "0.10.66"
tokio = { version = "1.40.0", features = ["full"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
clap = { version = "4.5.20", features = ["derive"] }
log = "0.4.22"
env_logger = "0.11.5"
thiserror = "2.0.12"
bytes = "1.7.2"
async-trait = "0.1.83"
base64 = "0.22.1"
hex = "0.4.3"
argon2 = "0.5.3"
rand = "0.9.1"
tun-tap = "0.1.4"
tokio-socks = "0.5.2"
libloading = "0.8.5"  # For dynamic plugin loading
prometheus = "0.14.0"  # For metrics collection
smoltcp = "0.12.0"  # For low-level network stack (optional DPI bypass)
chacha20poly1305 = "0.10.1"  # Additional encryption algorithm
ipnetwork = "0.21.1"  # For IP address parsing and validation
futures = "0.3.31"  # For async utilities
quinn = "0.11.8"
rustls = "0.23.31"
rcgen = "0.14.3"
webpki-roots = "1.0.2"
aes-siv = "0.7.0"
generic-array = "0.14"
[dev-dependencies]
tempfile = "3.13.0"  # For testing file-based configs
mockall = "0.13.0"  # For mocking in unit tests
tokio-test = "0.4.4"  # For async testing
