[package]
name = "rustVPN-core"
version = "0.1.0"
edition = "2024"

[dependencies]
boringtun = { git = "https://github.com/cloudflare/boringtun", branch = "master" }
shadowsocks-rust = { git = "https://github.com/shadowsocks/shadowsocks-rust", tag = "v1.21.0" }
openssl = "0.10.73"
tokio = { version = "1.47.1", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
clap = { version = "4.5.48", features = ["derive"] }
log = "0.4.28"
env_logger = "0.11.8"
thiserror = "2.0.12"
bytes = "1.10.1"
async-trait = "0.1.83"
base64 = "0.22.1"
hex = "0.4.3"
argon2 = "0.5.3"
rand = "0.9.2"
tun-tap = "0.1.4"
tokio-socks = "0.5.2"
libloading = "0.8.5"  
prometheus = "0.14.0" 
smoltcp = "0.12.0"  
chacha20poly1305 = "0.10.1"
ipnetwork = "0.21.1"  
futures = "0.3.31"  
quinn = "0.11.9"
rustls = "0.23.32"
rcgen = "0.14.3"
webpki-roots = "1.0.2"
aes-siv = "0.7.0"
generic-array = "1.2.0"
ratatui = "0.29.0"
crossterm = "0.29.0"
aes-gcm = "0.10.3"
x25519-dalek = "2.0.1"
ring = "0.17.14"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
anyhow = "1.0.100"
libc = "0.2.177"
url = "2.5.7"
socket2 = "0.6.0"

[dev-dependencies]
tempfile = "3.23.0"  
mockall = "0.13.1"  
tokio-test = "0.4.4"
assert_cmd = "2.0.17"
predicates = "3.1.3"

[target.'cfg(windows)'.dependencies]
winapi = "0.3.9"

[target.'cfg(unix)'.dependencies]
nix = "0.30.1"

[features]
default = ["wireguard", "shadowsocks", "openvpn"]
wireguard = []
shadowsocks = []
openvpn = []
vless = []
trojan = []
obfuscation = []
proxy = []
dns = []
killswitch = []
split_tunneling = []

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
